# SSDCoding

./: .gitignore  CMakeLists.txt  README.md  check.py  data_dist.py  draw.py  draw_dist.py  draw_dist.sh  draw_ratio.py  preprocess_hex.py  preprocess_hex.sh  requirements.txt
config/: Hynix_3DV7.txt  Micron_B47R.txt
src/: analyze.cc  analyze_freq.cc  binarize.cc  common.h  encode.cc  encode_huf.cc  encode_huf_ext.cc  format.cc  linear_model.h  truncate.cc
